# Todo-FastApi

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  todos.py
app/core/: config.py
app/dao/: todo_dao.py  user_dao.py
app/db/: session.py
app/exceptions/: handlers.py  http_exceptions.py
app/middlewares/: rate_limit.py  timing.py
app/models/: __init__.py  todo.py  user.py
app/schemas/: todo.py  user.py
app/services/: security.py
app/tests/: conftest.py  test_auth_and_todos.py  test_auth_flow.py  test_health.py
app/utils/: deps.py  pagination.py
